--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,24 @@
-pwa: {
-  manifest: {
-  "lang": "ro",
-  "name": "Cuvantul zilei",
+{
+  "name": "Cuvinte",
   "short_name": "Cuvinte",
-  "id":"Cuvinte",
-  "start_url": ".",
-  "display_override": ["fullscreen", "minimal-ui"],
-  "display": "standalone"
-  "orientation": "any",
-  "background_color": "#fff",
-  "dir":"assets",
-  "description": "Gaseste cuvantul zilei.",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
   "icons": [
     {
-      "src": "icons/loading-animation.png",
+      "src": "/icons/android-icon-36x36.png",
+      "sizes": "36x36",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/android-icon-48x48.png",
       "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/android-icon-72x72.png",
+      "sizes": "72x72",
       "type": "image/png"
     }
   ]
