--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -1,25 +1,35 @@
 {
-  "name": "Cuvinte",
+  "name": "Cuvinte alese",
   "short_name": "Cuvinte",
-  "start_url": "/index.html",
+  "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffffff",
   "background_color": "#ffffff",
+  "theme_color": "#0175C2",
+  "description": "Hai sa decoperim cuvinte",
+  "orientation": "natural",
+  "prefer_related_applications": false,
   "icons": [
     {
-      "src": "/icons/android-icon-36x36.png",
-      "sizes": "36x36",
+      "src": "icon.png",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/android-icon-48x48.png",
-      "sizes": "48x48",
+      "src": "icon.png",
+      "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/icons/android-icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png"
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
